--- a/src/algorithm/templates/algorithm/algo.html
+++ b/src/algorithm/templates/algorithm/algo.html
@@ -51,26 +51,23 @@
         </div>
     {% endfor %}
 
-    <div id="intermediary_response" style="display: none;">
-      <h4> La réponse intermédiaire est affichée içi</h4>
-      <button onclick="answer()" class="btn btn-outline-success">continuer</button>
-    </div>
-
-    <div id="final-response" style="display: none; text-align: left;"> </div>
+    <div id="final" style="display: none; text-align: left;"> </div>
   </div>
+
+
 
 <script type="text/javascript">
   var current_question_id = null;
   var rp = {};
   const none_output = "Condition non remplie.";
   set_default_responses();
-  answer(null);
+  answer(response=null);
 
   function next() {
     var radios = document.getElementsByName("options-outlined " + current_question_id);
     for (var radio of radios) {
       if (radio.checked) {
-        return answer(radio.value);
+        return answer(response=radio.value);
       }
     }
   }
@@ -78,7 +75,7 @@
   function previous() {
     // remove last response
     delete rp[Object.keys(rp)[Object.keys(rp).length-1]];
-    return answer(null);
+    return answer(response=null);
   }
 
   function set_default_responses(){
@@ -90,7 +87,7 @@
   }
 
   function show_response(response){
-    var resp_mode = response[0];
+    var resp_id = response[0];
     var resp_text = response[1];
 
     var content = "";
@@ -100,76 +97,60 @@
         content += "<p>" + line + "</p>";
       }
     }
+    document.getElementById(current_question_id).style.display = 'none';
 
-    if (resp_mode == 'final') {
+    if (resp_id == 'final') {
       document.getElementById('next-button').style.display = 'none';
-      document.getElementById('final-response').style.display = 'inline';
-      document.getElementById('final-response').innerHTML = content;
+      document.getElementById('final').style.display = 'inline';
+      document.getElementById('final').innerHTML = content;
     }
+    current_question_id = resp_id;
+  }
+
+  function show_question(question_id) {
+    if (Object.keys(rp).length == 0){
+      document.getElementById('previous-button').style.display = 'none';
+    }
+    else {
+      document.getElementById('previous-button').style.display = 'inline';
+    }
+
+    document.getElementById('next-button').style.display = 'inline';
+    document.getElementById(question_id).style.display = 'inline';
+    if (current_question_id != null) {
+      document.getElementById(current_question_id).style.display = 'none';
+    }
+    current_question_id = question_id;
   }
 
 
-  function answer(response=null) {
+  function answer(response, output=null) {
     if (response != null) {
       rp[current_question_id] = response;
     }
-    var output = process_algo();
 
-    if (current_question_id != null) {
-      document.getElementById(current_question_id).style.display = 'none';
+    if (output == null) {
+      var output = process_algo();
     }
 
     if (Array.isArray(output)) {
       show_response(output);
-    }
-    else {
-      if (Object.keys(rp).length == 0){
-        document.getElementById('previous-button').style.display = 'none';
-      }
-      else {
-        document.getElementById('previous-button').style.display = 'inline';
-      }
-      document.getElementById('final-response').style.display = 'none';
-      document.getElementById('next-button').style.display = 'inline';
-      document.getElementById(output).style.display = 'inline';
-      current_question_id = output;
+    } else {
+      show_question(output);
     }
   }
 
-  function get_result(results) {
-    var res = none_output;
-    if (results.length == 3) {
-      if (rp.bleeding_risk_1 == null) {
-        return 'bleeding_risk_1';
-      }
-      else if (rp.bleeding_risk_1 == 'faible'){
-        res = results[0];
-      }
-      else if (rp.bleeding_risk_1 == 'intermédiaire'){
-        res = results[1];
-      }
-      else if (rp.bleeding_risk_1 == 'élevé'){
-        res = results[2];
-      }
+  function get(question_id) {
+    if (question_id in rp) {
+      return rp[question_id];
     }
-    else if (results.length == 2) {
-      if (rp.bleeding_risk_2 == null) {
-        return 'bleeding_risk_2';
-      }
-      else if (rp.bleeding_risk_2 == 'faible'){
-        res = results[0];
-      }
-      else if (rp.bleeding_risk_2 == 'élevé'){
-        res = results[1];
-      }
+    else {
+      throw question_id;
     }
-    return ['final', {'Conclusion': res}]
   }
 
 
   function process_algo(){
-    var intermediate_result = [];
-
     if (rp.traitement1 == null) {
       return 'traitement1';
     }
@@ -327,6 +308,37 @@
       }
     }
     return ['final', {'Conclusion': none_output}]
+  }
+
+
+  function get_result(results) {
+    var res = none_output;
+    if (results.length == 3) {
+      if (rp.bleeding_risk_1 == null) {
+        return 'bleeding_risk_1';
+      }
+      else if (rp.bleeding_risk_1 == 'faible'){
+        res = results[0];
+      }
+      else if (rp.bleeding_risk_1 == 'intermédiaire'){
+        res = results[1];
+      }
+      else if (rp.bleeding_risk_1 == 'élevé'){
+        res = results[2];
+      }
+    }
+    else if (results.length == 2) {
+      if (rp.bleeding_risk_2 == null) {
+        return 'bleeding_risk_2';
+      }
+      else if (rp.bleeding_risk_2 == 'faible'){
+        res = results[0];
+      }
+      else if (rp.bleeding_risk_2 == 'élevé'){
+        res = results[1];
+      }
+    }
+    return ['final', {'Conclusion': res}]
   }
 
 </script>
