--- a/src/patient/templates/patient/patients.html
+++ b/src/patient/templates/patient/patients.html
@@ -46,7 +46,7 @@
 <div class="table-responsive">
 <table id="mytable" class="table table-bordred table-striped sortable">
   <thead>
-    <th>N°Inclusion</th>
+    <th>N°Patient</th>
     <th>Intervention</th>
     <th>Chirurgie</th>
     <th>Pathologie</th>
